Dismiss navigation menu when clearing presented state

When the app is foregrouneded, the presented state is cleared,
dismissing all the presented modals. The navigation popup wasn't
dismissed. This CL fixes it.

Bug: 810375
Change-Id: Iddd42daeb722f6b0f03bb387f816bc0629493d8c
Reviewed-on: https://chromium-review.googlesource.com/916041
Reviewed-by: Mark Cogan <marq@chromium.org>
Commit-Queue: Gauthier Ambard <gambard@chromium.org>
Cr-Commit-Position: refs/heads/master@{#536673}