ios/chrome/browser/ui/browser_view_controller.mm
@@ -1450,6 +1450,7 @@ applicationCommandEndpoint:(id<ApplicationCommands>)applicationCommandEndpoint {
   [_printController dismissAnimated:YES];
   _printController = nil;
   [self.dispatcher dismissToolsMenu];
+  [self.dispatcher dismissHistoryPopup];
   [_contextMenuCoordinator stop];
   [self dismissRateThisAppDialog];
 
